[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/drone_dd.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DigDugEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.56685, 14.8542 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="DigDugEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
z_index = 5
z_as_relative = false
collision_layer = 4
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Aggro" type="Area2D" parent="."]

[node name="AggroShape" type="CollisionShape2D" parent="Aggro"]
shape = SubResource( 2 )

[node name="HitDetector" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitDetector"]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -3.53671
margin_top = -32.0
margin_right = 19.4633
margin_bottom = -18.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Aggro" to="." method="_on_Aggro_body_entered"]
[connection signal="body_exited" from="Aggro" to="." method="_on_Aggro_body_exited"]
[connection signal="area_entered" from="HitDetector" to="." method="_on_HitDetector_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
